# Cigritous

./: .gitignore  .gitmodules  INSTALL.md  LICENSE  README.md  install_autostart.sh
autoinstall/: cigritous_autostart.sh
central_module/: central_module.ino
cigritous/: CMakeLists.txt  package.xml
cigritous/config/: vio_bridge.yaml  vision.yaml
cigritous/detector/: AprilTags.py  AruCo.py  CrowML.py  __init__.py
cigritous/launch/: launch_vio.py  vio_bridge.py  vision.py
cigritous/module/: AruCoDetector.py  CrowDetector.py  __init__.py
cigritous/scripts/: precision_landing.py  program_vision.py  vision.py
cigritous/src/: vio_bridge.cpp
ground_module/: ground_module.ino  settings.h
installation/: build.sh  clean_setup.sh  foxy_install.sh  galactic_to_foxy.sh  install_autostart.sh  install_env.sh
installation/autoinstall/: cigritous.service  cigritous_autostart.sh
installation/px4/: px4_install.sh
libraries/YL3869/: yl3869.cpp  yl3869.h
web-server/front-end-main/: package-lock.json  package.json  tempCodeRunnerFile.python
web-server/front-end-main/public/: index.html  manifest.json
web-server/front-end-main/src/pages/: About.js  Controls.js  Home.js
web-server/front-end-main/src/pages/components/: CustomButton.js  Drone.js  LineChartCentral.js  SensorCard.js
web-server/front-end-main/src/pages/utility/: FlightHandling.js  GoogleMaps.js  OptionsMQTT.js
web-server/new-back-end/: app.js  config.env  package-lock.json  package.json
web_server/front-end-main/: .env  README.md  package-lock.json  package.json  tailwind.config.js
web_server/front-end-main/src/: App.js
web_server/front-end-main/src/pages/: Home.js
web_server/front-end-main/src/pages/components/: CoordinateCard.js  Cube.js  LineChartNode.js  LocationDrone.js  LocationPin.js  PageNotFound.js  ParagraphView.js
web_server/front-end-main/src/styles/: theme.js
